welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:12: error: ';' expected but 'else' found.
		} else {
                  ^ZigZag:29: error: illegal start of statement (no modifiers allowed here)
	override def forward(i:Int)  { 
        ^ZigZag:32: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^ZigZag:35: error: illegal start of statement (no modifiers allowed here)
	override def backward(i:Int) {
        ^ZigZag:38: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^ZigZag:41: error: Missing closing brace `}' assumed here
}
^