welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
	var cpt = 0
	var inter = 0
	var h = getMondeHauteur() - 1
	var l = getMondeLargeur() - 1
	for (i<- 0 to h) {
		if (inter % 2 == 0) {
		for (g<- 0 to l ) {
			setPos(g,i)
			ecritMessage(cpt + inter)
			cpt = cpt + 1
		} else {
			for (g<- 0 to l ) {
			setPos(l-g,i)
			ecritMessage(cpt + inter)
			cpt = cpt + 1
				
		}
		}
		
		}
		
	}
	
